2007-02-05  Matic Zgur <mr.zgur@gmail.com>

	* configure.in: Added 'sl' to ALL_LINGUAS.

2007-01-03 Jordi Mas i Hernàndez <jordimash@gmail.com>

	* planner-gantt-view.c: adds mouse wheel support to
	to the gannt view.
	* planner-usage-view.c: adds mouse wheel support to
	to the usage view.

2007-01-02 Jordi Mas i Hernàndez <jordimash@gmail.com>

	* libplanner/mrp-task-manager.c: fixes bug #372694

2006-12-27 Jordi Mas i Hernàndez <jordimash@gmail.com>

	*  planner-html-plugin.c: fixes bug #388454. We were freeing a 
	memory block that was already free.

2006-12-27 Jordi Mas i Hernàndez <jordimash@gmail.com>

	* data/stylesheets/html1_gantt.xsl: I18N for strings and dates 
	* data/stylesheets/html1_resources.xsl: I18N for strings and dates
	* data/stylesheets/html1_tasks.xsl: I18N for strings and dates
	* data/stylesheets/planner2html.xsl: I18N for strings and dates
	* libplanner/mrp-xsl.c: Add I18N support for HTML export
	* po/POTFILES.in: Adds localizable.xml
	* data/stylesheets/localizable.xml: New strings to localise

2006-12-14 Kurt Maute <Kurt@Maute.us>
	* src/planner-window.c:  use ngettext for translation of plural.  Bug
	# 345163, patch contributed by Arthur Petitpierre
	* data/stylesheets/html1_css.xsl:  fix row height alignment of gantt
	on html export when viewed in Internet Explorer.  Bug # 332748, patch
	contributed by Nico de Groot
	* data/images/(various).png: commit Tango images contributed by
	Frédéric Bellaiche via bug #357525

2006-11-26 Kurt Maute <Kurt@Maute.us>
	* configure.in:  Version 0.14.2
	* data/mime/planner.xml.in: bug #353232 - patch to raise majic
	priority, fixing nautilus behavior when clicking on a planner file

2006-11-25 Kurt Maute <Kurt@Maute.us>
	* src/planner-gantt-background.c:  bug #368186 - patch to paint guide
	lines behind project start date rather than on top - contributed by
	Arthur Petitpierre
	* acinclude.m4:  added -Wno-return-type for compile with database
	enabled
	* configure.in
	* libplanner/mrp-sql.c