@@ -1,3 +1,10 @@
+2007-03-13  Kurt Maute	<kurt@maute.us>
+	* planner-gantt-chart.c
+	* planner-gantt-chart.h
+	* planner-gantt-view.c:
+	Store 'Show Guide Lines' setting in gconf - contributed by Marie
+	Durand <marie.durand@teamlog.com>
+
 2007-02-05  Matic Zgur <mr.zgur@gmail.com>
 
 	* configure.in: Added 'sl' to ALL_LINGUAS.
